# test

gpix/: CMakeLists.txt  double.h  main.cpp  main.cxx  wavefront.h
gpix/src/: canvas.cpp  canvas.h  double.h  main.cpp  tga.cpp  tga.h  util.h  view.h  wavefront.cpp  wavefront.h
idle/: idle.cpp  idle.h  xidle.cpp  xidle.h
ponderthis/2015_05/: Makefile  main.cpp
ponderthis/2017_02/: Makefile  main.cpp
ponderthis/2017_06/: Makefile  main.cpp
ponderthis/2017_07/: Makefile  main.cpp
rand_float/: Makefile  main.cpp  rand.h
